<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/backgroundColor">

            <TextView
                android:id="@+id/app_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_marginTop="20sp"
                android:layout_marginEnd="10sp"
                android:text="@string/app_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                app:layout_constraintEnd_toStartOf="@+id/settingsButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/settingsButton"
                style="?attr/materialIconButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:layout_marginEnd="10sp"
                android:contentDescription="@string/sort"
                app:icon="@drawable/settings_black_36dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/itemListContrainer"
                android:name="org.privacymatters.safespace.experimental.mainn.itemlist.ItemListFragment"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/fabArea"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/translucent"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </FrameLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/extended_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        app:icon="@drawable/add_black_36dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/camera_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:contentDescription="@string/open_camera"
        app:backgroundTint="?attr/colorSecondary"
        app:layout_constraintBottom_toTopOf="@+id/extended_fab"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/photo_camera_black_24dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/import_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:contentDescription="@string/import_files"
        app:backgroundTint="?attr/colorSecondary"
        app:layout_constraintBottom_toTopOf="@+id/camera_fab"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/add_fill0_wght400_grad0_opsz24" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/create_dir_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:contentDescription="@string/create_folder"
        app:backgroundTint="?attr/colorSecondary"
        app:layout_constraintBottom_toTopOf="@+id/import_fab"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/baseline_create_new_folder_24" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/note_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:contentDescription="@string/create_txt_menu"
        app:backgroundTint="?attr/colorSecondary"
        app:layout_constraintBottom_toTopOf="@+id/create_dir_fab"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/edit_note_black_36dp" />
</androidx.constraintlayout.widget.ConstraintLayout>